Bug 382376 - Exporting a PNG without transparency does not fill transparency with the selected color
Summary: Exporting a PNG without transparency does not fill transparency with the sele...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Victor Wåhlström
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-15 12:00 UTC by Victor Wåhlström
Modified: 2017-07-17 13:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Wåhlström 2017-07-15 12:00:36 UTC
Transparency appears to always be replaced with black.

Steps to reproduce:
1. Create a new image with a solid background color
2. Erase some of it
3. Export as PNG
4. Uncheck alpha channel
5. Select a fill color, e.g. red
6. Export
7. Open resulting image
Comment 1 Victor Wåhlström 2017-07-15 13:10:32 UTC
Git commit 864348016a5f1ea61326e1ea9d4a438e0a350175 by Victor Wåhlström.
Committed on 15/07/2017 at 13:06.
Pushed by victorw into branch 'master'.

PNG Export: Respect transparencyFillcolor configuration when exporting without an alpha channel

M  +2    -1    plugins/impex/png/kis_png_export.cc

https://commits.kde.org/krita/864348016a5f1ea61326e1ea9d4a438e0a350175
Comment 2 Victor Wåhlström 2017-07-15 13:38:45 UTC
Git commit c8ca1c0fd1a15446bb2d99c6f0bb22be9ccf1e2f by Victor Wåhlström.
Committed on 15/07/2017 at 13:37.
Pushed by victorw into branch 'master'.

JPEG Export: Respect transparencyFillcolor configuration

M  +2    -1    plugins/impex/jpeg/kis_jpeg_export.cc

https://commits.kde.org/krita/c8ca1c0fd1a15446bb2d99c6f0bb22be9ccf1e2f
Comment 3 Victor Wåhlström 2017-07-17 13:10:22 UTC
Git commit 9c969b60fa290005105883dd048d316bc4e96f29 by Victor Wåhlström.
Committed on 17/07/2017 at 13:06.
Pushed by victorw into branch 'krita/3.2'.

Respect transparencyFillcolor configuration when exporting to jpeg or png without an alpha channel

And don't create an alpha channel in png files that has no transparency
Related: bug 382354

M  +29   -3    plugins/impex/jpeg/kis_jpeg_export.cc
M  +32   -7    plugins/impex/png/kis_png_export.cc
M  +18   -18   plugins/impex/png/kis_wdg_options_png.ui

https://commits.kde.org/krita/9c969b60fa290005105883dd048d316bc4e96f29