PNG Export: Respect transparencyFillcolor configuration when exporting without an alpha channel

BUG:382376